--- a/src/Application/AShop.Catalog.Application/AShop.Catalog.Application.csproj
+++ b/src/Application/AShop.Catalog.Application/AShop.Catalog.Application.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Domain\AShop.Catalog.Domain\AShop.Catalog.Domain.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\AShop.Catalog.Infrastructure\AShop.Catalog.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
