--- a/src/Infrastructure/AShop.Catalog.Infrastructure/AShop.Catalog.Infrastructure.csproj
+++ b/src/Infrastructure/AShop.Catalog.Infrastructure/AShop.Catalog.Infrastructure.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Domain\AShop.Catalog.Domain\AShop.Catalog.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
