--- a/src/Infrastructure/AShop.Basket.Infrastructure/AShop.Basket.Infrastructure.csproj
+++ b/src/Infrastructure/AShop.Basket.Infrastructure/AShop.Basket.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Domain\AShop.Basket.Domain\AShop.Basket.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
