--- a/src/Application/AShop.Discount.Application/AShop.Discount.Application.csproj
+++ b/src/Application/AShop.Discount.Application/AShop.Discount.Application.csproj
@@ -7,13 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Domain\AShop.Discount.Domain\AShop.Discount.Domain.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
-      <PackageReference Include="Npgsql" Version="8.0.2" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
     </ItemGroup>
 
 </Project>
