--- a/src/WebAPI/AShop.Basket.WebAPI/appsettings.json
+++ b/src/WebAPI/AShop.Basket.WebAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+"CacheSettings" : {
+"ConnectionString": "localhost:6379"
+},
+"GrpcSettings": {
+"DiscountUrl": "http://localhost:9002"
+},
+"EventBusSettings": {
+"HostAddress": "amqp://guest:guest@localhost:5672"
+},
+"ElasticConfiguration": {
+"Uri": "http://localhost:9200"
+},
+"AllowedHosts": "*"
 }
