Order Model Created

--- a/src/Infrastructure/AShop.Order.Infrastructure/AShop.Order.Infrastructure.csproj
+++ b/src/Infrastructure/AShop.Order.Infrastructure/AShop.Order.Infrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Domain\AShop.Order.Domain\AShop.Order.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
