--- a/src/Infrastructure/AShop.Order.Infrastructure/AShop.Order.Infrastructure.csproj
+++ b/src/Infrastructure/AShop.Order.Infrastructure/AShop.Order.Infrastructure.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\..\Domain\AShop.Order.Domain\AShop.Order.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
