--- a/src/Application/AShop.Order.Application/AShop.Order.Application.csproj
+++ b/src/Application/AShop.Order.Application/AShop.Order.Application.csproj
@@ -7,4 +7,28 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Infrastructure\AShop.Order.Infrastructure\AShop.Order.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Commands\" />
+      <Folder Include="Excaptions\" />
+      <Folder Include="Extensions\" />
+      <Folder Include="Handlers\" />
+      <Folder Include="Mappers\" />
+      <Folder Include="Queries\" />
+      <Folder Include="Responses\" />
+      <Folder Include="Validators\" />
+    </ItemGroup>
+
 </Project>
