--- a/src/WebAPI/AShop.Order.WebAPI/AShop.Order.WebAPI.csproj
+++ b/src/WebAPI/AShop.Order.WebAPI/AShop.Order.WebAPI.csproj
@@ -5,11 +5,24 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\AShop.Order.Application\AShop.Order.Application.csproj" />
+      <ProjectReference Include="..\..\Commons\AShop.Common.Logging\AShop.Common.Logging.csproj" />
+      <ProjectReference Include="..\..\Commons\AShop.EventBus.Message\AShop.EventBus.Message.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="EventBusConsumer\" />
+      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
