--- a/src/WebAPI/AShop.Order.WebAPI/AShop.Order.WebAPI.csproj
+++ b/src/WebAPI/AShop.Order.WebAPI/AShop.Order.WebAPI.csproj
@@ -9,7 +9,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
+        <PackageReference Include="MassTransit" Version="7.3.1" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Polly" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
@@ -17,12 +29,6 @@
       <ProjectReference Include="..\..\Application\AShop.Order.Application\AShop.Order.Application.csproj" />
       <ProjectReference Include="..\..\Commons\AShop.Common.Logging\AShop.Common.Logging.csproj" />
       <ProjectReference Include="..\..\Commons\AShop.EventBus.Message\AShop.EventBus.Message.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\" />
-      <Folder Include="EventBusConsumer\" />
-      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
